--- a/nais/dev-gcp-intern.yaml
+++ b/nais/dev-gcp-intern.yaml
@@ -6,5 +6,6 @@
 "api-scope": "api://dev-fss.arbeidsgiver.tiltak-proxy/.default"
 "proxy-cluster": "dev-fss"
 "aad-redirect-url": "https://tiltaksgjennomforing.dev.intern.nav.no/oauth2/callback"
+"decorator-internal": "https://internarbeidsflatedecorator-q0.dev.adeo.no"
 "decorator-internal-script": "https://internarbeidsflatedecorator-q0.dev.adeo.no/internarbeidsflatedecorator/v2.1/static/js/head.v2.min.js"
 "decorator-internal-styling": "https://internarbeidsflatedecorator-q0.dev.adeo.no/internarbeidsflatedecorator/v2.1/static/css/main.css"
