--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "dayjs": "^1.10.6",
         "event-stream": "^4.0.1",
         "express": "^4.17.1",
+        "express-async-handler": "^1.2.0",
         "express-http-proxy": "1.6.2",
         "fs-extra": "^10.0.0",
         "helmet": "^4.6.0",
