--- a/nais/prod-gcp-intern.yaml
+++ b/nais/prod-gcp-intern.yaml
@@ -6,5 +6,6 @@
 "api-scope": "api://prod-fss.arbeidsgiver.tiltak-proxy/.default"
 "proxy-cluster": "prod-fss"
 "aad-redirect-url": "https://arbeidsgiver.intern.nav.no/tiltaksgjennomforing/oauth2/callback"
+"decorator-internal": "https://internarbeidsflatedecorator.nais.intern.nav.no"
 "decorator-internal-script": "https://internarbeidsflatedecorator.nais.intern.nav.no/internarbeidsflatedecorator/v2.1/static/js/head.v2.min.js"
 "decorator-internal-styling": "https://internarbeidsflatedecorator.nais.intern.nav.no/internarbeidsflatedecorator/v2.1/static/css/main.css"
