oppdatert bygg/miljo var i yml filene

--- a/nais/nais-gcp-intern.yaml
+++ b/nais/nais-gcp-intern.yaml
@@ -27,7 +27,7 @@ spec:
     - name: ENABLE_INTERNAL_MENU
       value: 'true'
     - name: DECORATOR_INTERNAL
-      value: '{{{decorator-internal}}'
+      value: '{{{decorator-internal}}}'
     - name: DECORATOR_INTERNAL_SCRIPT
       value: '{{{decorator-internal-script}}}'
     - name: DECORATOR_INTERNAL_STYLING
