accesspolicy outbound til notifikasjon-bruker-api

--- a/nais/nais-gcp.yaml
+++ b/nais/nais-gcp.yaml
@@ -55,5 +55,7 @@ spec:
           cluster: '{{{proxy-cluster}}}'
         - application: tiltak-stillingstitler
           namespace: arbeidsgiver
+        - application: notifikasjon-bruker-api
+          namespace: fager
       external:
         - host: tiltak-proxy.{{{proxy-cluster}}}-pub.nais.io
