Vekk fra loginservice (#1073)
* Lagt til kode for azureauth. Slettet app fra fss

* Oppdatert byggfiler for deploy av to apper til gcp

* Fikset yaml indentering

* Endret deploy-oppsett for å deploye en branch

* Endret yml til yaml

* Fikset import statement

* Fikset export syntaks error

* Lagt til LOGIN_URL

* Fikset sjekk for intern ingress for innlogginskilder

* Endret på oppsett av klienter til tokenx og azure

* fjerner .default fra import

* lagt til mer azureConfig som manglet og oppdatert ingresser til intern-sidene

* oppdatert feil variabelnavn

* tar jwks ut av objekt i azureConfig

* fjerner en .default til

* masse logging

* skrivefeil

* bytter om på obo og tokenx for intern vs ekstern

* Lagt til navident i extra claims for azure

* Skal ikke trenge å sette tenant, kommer fra platform

* Lokalt oppsett for å bli mer likt prod

* Endret aud på token lokalt og labs til fake

* Rydding i logging i lokalproxy

* Refaktorert for å sette opp ting i riktig rekkefølge

* setupProxy i toppen av filen. hehe.

* litt rydding

* Flyttet runt routes for å ikke få en wildcard

* Navident som string i extra claim

* Fikset lokalt oppsett etter timing-problemer

* Endret login-url for intern app

* setter internal menu til false eksternt og omvendt

* oppdatert bygg og miljo var i yml filene

* fikset key feil i lesing av bygg/miljo yml

* wip

* oppdatert bygg/miljo var i yml filene

* wip

* oppdatert bygg/miljo var i yml filene

* lagt til decorator proxy

* oppdatert bygg/miljo var i yml filene

* oppdatert bygg/miljo var i yml filene

* oppdatert decorator proxy

* oppdatert decorator proxy

* Bruker require og ikke import

* Mer node 12 feil...

* Og enda flere fikser grunnet gammel node

* Lagt til noen missing parametrar

* Tester relativ url for å hente internarbedsflatedecorator

* Redirecter til internarbeidsflate og ikke proxy

* Setter useProxy for å kun

--- a/.github/workflows/deploy-branch.yml
+++ b/.github/workflows/deploy-branch.yml
@@ -41,27 +41,27 @@ jobs:
       - name: Sett miljøvariabel IMAGE
         run: echo "IMAGE=$IMAGE_BASE:$COMMIT" >> $GITHUB_ENV
 
-      - name: Deploy til dev-gcp
+      - name: Deploy til dev-gcp intern
         uses: nais/deploy/actions/deploy@v1
         env:
           TEAM: arbeidsgiver
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-gcp
-          RESOURCE: nais/nais-gcp.yaml
+          RESOURCE: nais/nais-gcp-intern.yaml
           PRINT_PAYLOAD: true
-          VARS: nais/dev-gcp.yml
+          VARS: nais/dev-gcp-intern.yaml
           REF: ${{ env.COMMIT }}
           IMAGE: ${{ env.IMAGE }}
 
-      - name: Deploy til dev-fss
+      - name: Deploy til dev-gcp ekstern
         uses: nais/deploy/actions/deploy@v1
         env:
           TEAM: arbeidsgiver
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: dev-fss
-          RESOURCE: naiserator.yaml
+          CLUSTER: dev-gcp
+          RESOURCE: nais/nais-gcp-ekstern.yaml
           PRINT_PAYLOAD: true
-          VARS: nais/dev-fss.json
+          VARS: nais/dev-gcp-ekstern.json
           REF: ${{ env.COMMIT }}
           IMAGE: ${{ env.IMAGE }}
           
@@ -87,14 +87,14 @@ jobs:
             github.issues.listForRepo({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              labels: ['deploy', 'dev-fss']
+              labels: ['deploy', 'dev-gcp']
             }).then(response => {
               response.data.forEach(issue => {
                 github.issues.removeLabel({
                   owner: context.repo.owner,
                   repo: context.repo.repo,
                   issue_number: issue.number,
-                  name: 'dev-fss'
+                  name: 'dev-gcp'
                 });
               });
             });
@@ -110,6 +110,6 @@ jobs:
               owner: context.issue.owner,
               repo: context.issue.repo,
               issue_number: ${{ github.event.client_payload.github.payload.issue.number }},
-              labels: ['dev-fss']
+              labels: ['dev-gcp']
             });
 
