--- a/nais/prod-gcp-ekstern.yaml
+++ b/nais/prod-gcp-ekstern.yaml
@@ -1,7 +1,8 @@
 "ingress": "https://arbeidsgiver.nav.no/tiltaksgjennomforing"
 "api-gw-url": "https://tiltak-proxy.prod-fss-pub.nais.io"
-"selvbetjening-login-url": "/tiltaksgjennomforing/oauth2/login"
+"login-url": "/tiltaksgjennomforing/oauth2/login"
 "logout-url": "/tiltaksgjennomforing/oauth2/logout"
 "stillingstitler-url": "http://tiltak-stillingstitler"
 "api-audience": "prod-fss:arbeidsgiver:tiltak-proxy"
 "proxy-cluster": "prod-fss"
+"aad-redirect-url": "https://arbeidsgiver.nav.no/tiltaksgjennomforing/oauth2/callback"
