--- a/nais/prod-gcp-intern.yaml
+++ b/nais/prod-gcp-intern.yaml
@@ -1,11 +1,11 @@
-"ingress": "https://arbeidsgiver.intern.nav.no/tiltaksgjennomforing"
+"ingress": "https://tiltaksgjennomforing.intern.nav.no"
 "api-gw-url": "https://tiltak-proxy.prod-fss-pub.nais.io"
-"login-url": "/tiltaksgjennomforing/oauth2/login"
-"logout-url": "/tiltaksgjennomforing/oauth2/logout"
+"login-url": "/oauth2/login"
+"logout-url": "/oauth2/logout"
 "stillingstitler-url": "http://tiltak-stillingstitler"
 "api-scope": "api://prod-fss.arbeidsgiver.tiltak-proxy/.default"
 "proxy-cluster": "prod-fss"
-"aad-redirect-url": "https://arbeidsgiver.intern.nav.no/tiltaksgjennomforing/oauth2/callback"
+"aad-redirect-url": "https://tiltaksgjennomforing.intern.nav.no/oauth2/callback"
 "decorator-internal": "https://internarbeidsflatedecorator.nais.intern.nav.no"
 "decorator-internal-script": "https://internarbeidsflatedecorator.nais.intern.nav.no/internarbeidsflatedecorator/v2.1/static/js/head.v2.min.js"
 "decorator-internal-styling": "https://internarbeidsflatedecorator.nais.intern.nav.no/internarbeidsflatedecorator/v2.1/static/css/main.css"
