--- a/nais/prod-gcp-intern.yaml
+++ b/nais/prod-gcp-intern.yaml
@@ -7,5 +7,5 @@
 "proxy-cluster": "prod-fss"
 "aad-redirect-url": "https://tiltaksgjennomforing.intern.nav.no/oauth2/callback"
 "decorator-internal": "https://internarbeidsflatedecorator.nais.intern.nav.no"
-"decorator-internal-script": "https://internarbeidsflatedecorator.nais.intern.nav.no/internarbeidsflatedecorator/v2.1/static/js/head.v2.min.js"
-"decorator-internal-styling": "https://internarbeidsflatedecorator.nais.intern.nav.no/internarbeidsflatedecorator/v2.1/static/css/main.css"
+"decorator-internal-script": "/internarbeidsflatedecorator/v2.1/static/js/head.v2.min.js"
+"decorator-internal-styling": "/internarbeidsflatedecorator/v2.1/static/css/main.css"
