--- a/nais/dev-gcp-ekstern.yaml
+++ b/nais/dev-gcp-ekstern.yaml
@@ -6,3 +6,4 @@
 "api-audience": "dev-fss:arbeidsgiver:tiltak-proxy"
 "proxy-cluster": "dev-fss"
 "aad-redirect-url": "https://tiltaksgjennomforing.dev.nav.no/oauth2/callback"
+"notifikasjon-audience": "dev-gcp:fager:notifikasjon-bruker-api"
