--- a/nais/prod-gcp-ekstern.yaml
+++ b/nais/prod-gcp-ekstern.yaml
@@ -6,3 +6,4 @@
 "api-audience": "prod-fss:arbeidsgiver:tiltak-proxy"
 "proxy-cluster": "prod-fss"
 "aad-redirect-url": "https://arbeidsgiver.nav.no/tiltaksgjennomforing/oauth2/callback"
+"notifikasjon-audience": "prod-gcp:fager:notifikasjon-bruker-api"
