--- a/.github/workflows/bygg-og-deploy-dev.yml
+++ b/.github/workflows/bygg-og-deploy-dev.yml
@@ -1,9 +1,7 @@
-name: Bygg og deploy master
+name: Bygg og deploy dev
 
 on:
-  push:
-    branches:
-      - 'master'
+  workflow_dispatch:
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -13,17 +11,17 @@ env:
 
 jobs:
   bygg:
-    name: Bygg
+    name: Bygg og deploy
     runs-on: ubuntu-latest
     steps:
       - name: Sjekk ut kode
         uses: actions/checkout@v2
-      - name: Installer avhengigheter
+      - name: Frontend yarn install
         run: yarn install --frozen-lockfile
       - name: Kjør tester
         run: yarn test
-      - name: Bygg
-        run: yarn run build
+      - name: Frontend yarn build
+        run: yarn build
       - name: Sett opp sentry release
         run: yarn run release
       - name: Bygg, tag og push Docker-image
@@ -31,38 +29,6 @@ jobs:
           echo ${GITHUB_TOKEN} | docker login ghcr.io -u ${GITHUB_REPOSITORY} --password-stdin
           docker build --tag ${IMAGE} .
           docker push ${IMAGE}
-
-  deploy-prod-gcp-intern:
-    name: Deploy til prod-gcp intern
-    runs-on: ubuntu-latest
-    needs: bygg
-    steps:
-      - name: Sjekk ut kode
-        uses: actions/checkout@v2
-      - name: Deploy til prod-gcp intern
-        uses: nais/deploy/actions/deploy@v1
-        env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: prod-gcp
-          RESOURCE: nais/nais-gcp-intern.yaml
-          PRINT_PAYLOAD: true
-          VARS: nais/prod-gcp-intern.yaml
-
-  deploy-prod-gcp-ekstern:
-    name: Deploy til prod-gcp ekstern
-    runs-on: ubuntu-latest
-    needs: bygg
-    steps:
-      - name: Sjekk ut kode
-        uses: actions/checkout@v2
-      - name: Deploy til prod-gcp ekstern
-        uses: nais/deploy/actions/deploy@v1
-        env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: prod-gcp
-          RESOURCE: nais/nais-gcp-ekstern.yaml
-          PRINT_PAYLOAD: true
-          VARS: nais/prod-gcp-ekstern.yaml
 
   deploy-dev-gcp-intern:
     name: Deploy til dev-gcp intern
