--- a/nais/dev-gcp-intern.yaml
+++ b/nais/dev-gcp-intern.yaml
@@ -1,6 +1,6 @@
 "ingress": "https://tiltaksgjennomforing.dev.intern.nav.no"
 "api-gw-url": "https://tiltak-proxy.dev-fss-pub.nais.io"
-"login-url": "/oauth2/login"
+"login-url": "/oauth2/login?redirect=/tiltaksgjennomforing"
 "logout-url": "/oauth2/logout"
 "stillingstitler-url": "http://tiltak-stillingstitler"
 "api-scope": "api://dev-fss.arbeidsgiver.tiltak-proxy/.default"
