oppdatert login/logout-url miljo-var i dev-gcp config

--- a/nais/dev-gcp-ekstern.yaml
+++ b/nais/dev-gcp-ekstern.yaml
@@ -1,7 +1,7 @@
 "ingress": "https://tiltaksgjennomforing.dev.nav.no"
 "api-gw-url": "https://tiltak-proxy.dev-fss-pub.nais.io"
-"login-url": "/oauth2/login"
-"logout-url": "/oauth2/logout"
+"login-url": "/tiltaksgjennomforing/oauth2/login"
+"logout-url": "/tiltaksgjennomforing/oauth2/logout"
 "stillingstitler-url": "http://tiltak-stillingstitler"
 "api-audience": "dev-fss:arbeidsgiver:tiltak-proxy"
 "proxy-cluster": "dev-fss"
