--- a/nais/dev-gcp-ekstern.yaml
+++ b/nais/dev-gcp-ekstern.yaml
@@ -1,6 +1,6 @@
 "ingress": "https://tiltaksgjennomforing.dev.nav.no"
 "api-gw-url": "https://tiltak-proxy.dev-fss-pub.nais.io"
-"login-url": "/oauth2/login"
+"login-url": "/oauth2/login?redirect=/tiltaksgjennomforing"
 "logout-url": "/oauth2/logout"
 "stillingstitler-url": "http://tiltak-stillingstitler"
 "api-audience": "dev-fss:arbeidsgiver:tiltak-proxy"
