støtte for labs deploy. labs skal tydeligvis snart bort. se https://nav-it.slack.com/archives/C5KUST8N6/p1674573453174539\?thread_ts\=1674572577.446359\&cid\=C5KUST8N6

--- a/.github/workflows/bygg-og-deploy-master.yml
+++ b/.github/workflows/bygg-og-deploy-master.yml
@@ -111,3 +111,4 @@ jobs:
           RESOURCE: nais/labs-gcp.yaml
           PRINT_PAYLOAD: true
           VARS: nais/labs-gcp.json
+          DEPLOY_SERVER: deploy.nais.io:443
