Nedgraderer til gammel ubuntu som bygge-image

--- a/.github/workflows/bygg-og-deploy-master.yml
+++ b/.github/workflows/bygg-og-deploy-master.yml
@@ -14,7 +14,7 @@ env:
 jobs:
   bygg:
     name: Bygg
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - name: Sjekk ut kode
         uses: actions/checkout@v3
@@ -34,7 +34,7 @@ jobs:
 
   deploy-prod-gcp-intern:
     name: Deploy til prod-gcp intern
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     needs: bygg
     steps:
       - name: Sjekk ut kode
@@ -50,7 +50,7 @@ jobs:
 
   deploy-prod-gcp-ekstern:
     name: Deploy til prod-gcp ekstern
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     needs: bygg
     steps:
       - name: Sjekk ut kode
@@ -66,7 +66,7 @@ jobs:
 
   deploy-dev-gcp-intern:
     name: Deploy til dev-gcp intern
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     needs: bygg
     steps:
       - name: Sjekk ut kode
@@ -82,7 +82,7 @@ jobs:
 
   deploy-dev-gcp-ekstern:
     name: Deploy til dev-gcp ekstern
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     needs: bygg
     steps:
       - name: Sjekk ut kode
@@ -98,7 +98,7 @@ jobs:
 
   deploy-labs-gcp:
     name: Deploy til labs-gcp
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     needs: bygg
     steps:
       - name: Sjekk ut kode
