--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,17 @@
 
 # dependencies
 /node_modules
+./server/node_modules
+./server/dist
+/.pnp
+.pnp.js
 
 # testing
 /coverage
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
