--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') craco build",
         "release": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') node sentry.js",
-        "server": "node server.js",
+        "server": "node server/server.ts",
         "start": "craco start",
         "start-ekstern": "cross-env ENABLE_EXTERNAL_MENU=true craco start",
         "start-intern": "cross-env process.env.ENABLE_INTERNAL_MENU=true craco start",
