--- a/server/package.json
+++ b/server/package.json
@@ -3,28 +3,33 @@
     "version": "1.0.0",
     "scripts": {
         "start": "NODE_ENV=development nodemon --exec babel-node src/main.js",
-        "build": "./node_modules/.bin/babel src -d dist",
+        "build": "./node_modules/.bin/babel . -d dist",
         "serve": "node ../dist/main.js"
     },
     "license": "MIT",
     "dependencies": {
+        "@navikt/arbeidsgiver-notifikasjoner-brukerapi-mock": "^5.4.8",
+        "@navikt/nav-dekoratoren-moduler": "^1.6.9",
+        "@types/express-http-proxy": "^1.6.3",
+        "axios": "^1.3.4",
+        "express-async-handler": "^1.2.0",
+        "express-http-proxy": "^1.6.3",
+        "fs-extra": "^11.1.0",
         "helmet": "^6.0.1",
         "http-proxy-middleware": "^2.0.6",
-        "node-cache": "^5.1.2",
         "jsdom": "^21.1.0",
-        "fs-extra": "^11.1.0",
+        "node-cache": "^5.1.2",
         "node-fetch": "^3.3.0",
-        "express-async-handler": "^1.2.0",
-        "axios": "^1.3.4",
-        "openid-client": "^5.4.0",
-        "express-http-proxy": "^1.6.3",
-        "navikt/arbeidsgiver-notifikasjoner-brukerapi-mock": "^5.0.1"
+        "openid-client": "^5.4.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.10.5",
         "@babel/core": "^7.10.5",
         "@babel/node": "^7.10.5",
         "@babel/preset-env": "^7.6.0",
+        "@types/express": "^4.17.17",
+        "@types/fs-extra": "^11.0.1",
+        "@types/jsdom": "^21.1.0",
         "morgan": "^1.9.1",
         "morgan-body": "^2.4.8",
         "nodemon": "^2.0.4"
