--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
     "scripts": {
         "start": "NODE_ENV=development nodemon --exec babel-node src/main.js",
         "build": "./node_modules/.bin/babel . -d dist",
-        "serve": "node ../dist/main.js"
+        "serve": "node ../dist/main.js",
+        "build-test": "cross-env NODE_ENV=production webpack --config webpack.config.js"
     },
     "license": "MIT",
     "dependencies": {
@@ -20,18 +21,25 @@
         "jsdom": "^21.1.0",
         "node-cache": "^5.1.2",
         "node-fetch": "^3.3.0",
-        "openid-client": "^5.4.0"
+        "openid-client": "^5.4.0",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^5.0.1"
     },
     "devDependencies": {
-        "@babel/cli": "^7.10.5",
-        "@babel/core": "^7.10.5",
+        "@babel/cli": "^7.21.0",
+        "@babel/core": "^7.21.0",
         "@babel/node": "^7.10.5",
+        "@babel/plugin-transform-modules-commonjs": "^7.21.2",
         "@babel/preset-env": "^7.6.0",
+        "@babel/preset-react": "^7.18.6",
         "@types/express": "^4.17.17",
         "@types/fs-extra": "^11.0.1",
         "@types/jsdom": "^21.1.0",
+        "babel-preset-react-app": "^10.0.1",
+        "cross-env": "^7.0.3",
         "morgan": "^1.9.1",
         "morgan-body": "^2.4.8",
-        "nodemon": "^2.0.4"
+        "nodemon": "^2.0.4",
+        "webpack-node-externals": "^3.0.0"
     }
 }
