--- a/package.json
+++ b/package.json
@@ -91,6 +91,12 @@
         "url-search-params-polyfill": "^8.1.1"
     },
     "devDependencies": {
+        "@babel/cli": "^7.21.0",
+        "@babel/core": "^7.21.0",
+        "@babel/node": "^7.20.7",
+        "@babel/plugin-transform-modules-commonjs": "^7.21.2",
+        "@babel/preset-env": "^7.20.2",
+        "@babel/preset-react": "^7.18.6",
         "@craco/craco": "^6.2.0",
         "@navikt/arbeidsgiver-notifikasjoner-brukerapi-mock": "^5.4.2",
         "@sentry/cli": "^1.68.0",
@@ -112,6 +118,7 @@
         "@types/react-responsive": "^8.0.3",
         "@types/react-router-dom": "^5.1.8",
         "@types/react-select": "^4.0.17",
+        "babel-preset-react-app": "^10.0.1",
         "chai": "^4.3.4",
         "craco-less": "^1.19.0",
         "cross-env": "^7.0.3",
