--- a/server/package.json
+++ b/server/package.json
@@ -32,9 +32,11 @@
         "@babel/plugin-transform-modules-commonjs": "^7.21.2",
         "@babel/preset-env": "^7.6.0",
         "@babel/preset-react": "^7.18.6",
+        "@babel/preset-typescript": "^7.21.0",
         "@types/express": "^4.17.17",
         "@types/fs-extra": "^11.0.1",
         "@types/jsdom": "^21.1.0",
+        "babel-loader": "^9.1.2",
         "babel-preset-react-app": "^10.0.1",
         "cross-env": "^7.0.3",
         "morgan": "^1.9.1",
