--- a/.github/workflows/bygg-og-deploy-dev.yml
+++ b/.github/workflows/bygg-og-deploy-dev.yml
@@ -16,6 +16,12 @@ jobs:
     steps:
       - name: Sjekk ut kode
         uses: actions/checkout@v2
+      - name: Server yarn install
+        working-directory: ./server
+        run: yarn install
+      - name: Server yarn build
+        working-directory: ./server
+        run: yarn build
       - name: Frontend yarn install
         run: yarn install --frozen-lockfile
       - name: Kjør tester
