--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,9 @@
     "version": "1.0.0",
     "scripts": {
         "start": "NODE_ENV=development nodemon --exec babel-node src/main.js",
-        "build": "./node_modules/.bin/babel . -d dist",
+        "build-test": "./node_modules/.bin/babel . -d dist",
         "serve": "node ../dist/main.js",
-        "build-test": "cross-env NODE_ENV=production webpack --config webpack.config.js"
+        "build": "cross-env NODE_ENV=production webpack --config webpack.config.js"
     },
     "license": "MIT",
     "dependencies": {
