--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "start": "craco start",
         "start-ekstern": "cross-env ENABLE_EXTERNAL_MENU=true craco start",
         "start-intern": "cross-env process.env.ENABLE_INTERNAL_MENU=true craco start",
+        "serve-test": "cross-env process.env.ENABLE_INTERNAL_MENU=true node dist/server.js",
         "test": "cross-env CI=true craco test -w 1",
         "test:config": "node -e 'console.dir(require(\"./jest.config.js\"))'",
         "test:help": "craco test --help",
@@ -24,29 +25,32 @@
         "@navikt/ds-icons": "^0.5.2",
         "@navikt/ds-react": "^2.6.0",
         "@navikt/fnrvalidator": "^1.1.4",
+        "@navikt/nav-dekoratoren-moduler": "^1.6.9",
         "@navikt/navspa": "^3.0.2",
         "@sentry/react": "^6.11.0",
         "@types/amplitude-js": "^8.0.1",
+        "@types/express-http-proxy": "^1.6.3",
         "@types/lodash.debounce": "^4.0.6",
         "@types/react-modal": "^3.12.1",
         "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
         "amplitude-js": "^8.5.0",
-        "axios": "^0.21.1",
+        "axios": "^1.3.4",
         "axios-retry": "^3.1.9",
         "babel-polyfill": "^6.26.0",
         "babel-runtime": "^6.26.0",
+        "body-parser": "^1.20.2",
         "classnames": "^2.3.1",
         "dayjs": "^1.10.6",
         "event-stream": "^4.0.1",
         "express": "^4.17.1",
         "express-async-handler": "^1.2.0",
-        "express-http-proxy": "1.6.2",
-        "fs-extra": "^10.0.0",
-        "helmet": "^4.6.0",
+        "express-http-proxy": "^1.6.3",
+        "fs-extra": "^11.1.0",
+        "helmet": "^6.0.1",
         "html-webpack-plugin": "^5.3.2",
-        "http-proxy-middleware": "^2.0.1",
+        "http-proxy-middleware": "^2.0.6",
         "intl": "^1.2.5",
-        "jsdom": "^17.0.0",
+        "jsdom": "^21.1.1",
         "lodash.debounce": "^4.0.8",
         "lodash.isequal": "^4.5.0",
         "lodash.sortby": "^4.7.0",
@@ -70,9 +74,9 @@
         "nav-frontend-skjema-style": "^3.0.1",
         "nav-frontend-typografi": "^4.0.1",
         "nav-frontend-typografi-style": "^2.0.1",
-        "node-cache": "5.1.2",
-        "node-fetch": "2.6.1",
-        "openid-client": "3.7.2",
+        "node-cache": "^5.1.2",
+        "node-fetch": "^3.3.1",
+        "openid-client": "^5.4.0",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-app-polyfill": "^2.0.0",
@@ -88,7 +92,9 @@
         "react-router-dom": "^5.2.0",
         "react-select": "^4.3.1",
         "swr": "^1.1.1",
-        "url-search-params-polyfill": "^8.1.1"
+        "url-search-params-polyfill": "^8.1.1",
+        "webpack": "^5.76.1",
+        "webpack-cli": "^5.0.1"
     },
     "devDependencies": {
         "@babel/cli": "^7.21.0",
