--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
         "start": "NODE_ENV=development nodemon --exec babel-node src/main.js",
         "build-test": "./node_modules/.bin/babel . -d dist",
         "serve": "node ../dist/main.js",
+        "serve-test": "cross-env process.env.ENABLE_INTERNAL_MENU=true node ../build/server.js",
         "build": "cross-env NODE_ENV=production webpack --config webpack.config.js"
     },
     "license": "MIT",
@@ -30,13 +31,19 @@
         "@babel/core": "^7.21.0",
         "@babel/node": "^7.10.5",
         "@babel/plugin-transform-modules-commonjs": "^7.21.2",
+        "@babel/plugin-transform-runtime": "^7.21.0",
         "@babel/preset-env": "^7.6.0",
         "@babel/preset-react": "^7.18.6",
         "@babel/preset-typescript": "^7.21.0",
+        "@babel/runtime": "^7.21.0",
+        "@babel/runtime-corejs2": "^7.21.0",
         "@types/express": "^4.17.17",
         "@types/fs-extra": "^11.0.1",
         "@types/jsdom": "^21.1.0",
         "babel-loader": "^9.1.2",
+        "babel-plugin-dynamic-import-node": "^2.3.3",
+        "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "babel-preset-react-app": "^10.0.1",
         "cross-env": "^7.0.3",
         "html-webpack-plugin": "^5.5.0",
