--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "tiltaksgjennomforing",
     "version": "0.1.0",
     "private": true,
+    "type": "commonjs",
     "homepage": "/tiltaksgjennomforing",
     "scripts": {
         "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') craco build",
@@ -28,6 +29,7 @@
         "@navikt/nav-dekoratoren-moduler": "^1.6.9",
         "@navikt/navspa": "^3.0.2",
         "@sentry/react": "^6.11.0",
+        "@testing-library/user-event": "^14.4.3",
         "@types/amplitude-js": "^8.0.1",
         "@types/express-http-proxy": "^1.6.3",
         "@types/lodash.debounce": "^4.0.6",
@@ -78,13 +80,13 @@
         "node-fetch": "^3.3.1",
         "openid-client": "^5.4.0",
         "prop-types": "^15.7.2",
-        "react": "^17.0.2",
+        "react": "^18.2.0",
         "react-app-polyfill": "^2.0.0",
         "react-collapse": "^5.1.0",
         "react-cookie": "^4.1.1",
         "react-copy-to-clipboard": "^5.0.4",
         "react-day-picker": "^7.4.10",
-        "react-dom": "^17.0.2",
+        "react-dom": "^18.2.0",
         "react-intl": "^5.20.10",
         "react-loading-skeleton": "^2.2.0",
         "react-modal": "^3.14.3",
@@ -93,7 +95,6 @@
         "react-select": "^4.3.1",
         "swr": "^1.1.1",
         "url-search-params-polyfill": "^8.1.1",
-        "webpack": "^5.76.1",
         "webpack-cli": "^5.0.1"
     },
     "devDependencies": {
@@ -103,22 +104,22 @@
         "@babel/plugin-transform-modules-commonjs": "^7.21.2",
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-react": "^7.18.6",
-        "@craco/craco": "^6.2.0",
+        "@craco/craco": "^7.1.0",
         "@navikt/arbeidsgiver-notifikasjoner-brukerapi-mock": "^5.4.8",
         "@sentry/cli": "^1.68.0",
-        "@testing-library/jest-dom": "^5.15.1",
-        "@testing-library/react": "^12.1.2",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^14.0.0",
         "@types/chai": "^4.2.21",
         "@types/classnames": "^2.3.0",
         "@types/enzyme": "^3.10.9",
         "@types/fetch-mock": "^7.3.5",
-        "@types/jest": "^27.0.1",
-        "@types/node": "^16.7.2",
-        "@types/react": "^17.0.19",
+        "@types/jest": "^29.4.0",
+        "@types/node": "^18.15.1",
+        "@types/react": "^18.0.28",
         "@types/react-collapse": "^5.0.1",
         "@types/react-copy-to-clipboard": "^5.0.1",
         "@types/react-day-picker": "^5.3.0",
-        "@types/react-dom": "^17.0.9",
+        "@types/react-dom": "^18.0.11",
         "@types/react-intl": "^2.3.18",
         "@types/react-maskedinput": "^4.0.5",
         "@types/react-responsive": "^8.0.3",
@@ -126,7 +127,7 @@
         "@types/react-select": "^4.0.17",
         "babel-preset-react-app": "^10.0.1",
         "chai": "^4.3.4",
-        "craco-less": "^1.19.0",
+        "craco-less": "^2.0.0",
         "cross-env": "^7.0.3",
         "enzyme": "^3.11.0",
         "fetch-mock": "^9.11.0",
@@ -139,12 +140,12 @@
         "prettier": "^2.8.4",
         "pretty-quick": "^3.1.1",
         "react-error-overlay": "6.0.9",
-        "react-scripts": "^4.0.3",
+        "react-scripts": "^5.0.1",
         "svgo": "2.4.0",
         "tslint": "^5.20.1",
         "tslint-config-prettier": "^1.18.0",
         "tslint-react": "^4.1.0",
-        "typescript": "^4.4.2",
+        "typescript": "^4.9.5",
         "webpack-bundle-analyzer": "^4.4.2"
     },
     "browserslist": [
@@ -153,6 +154,11 @@
         "not ie < 10",
         "not op_mini all"
     ],
+    "jest": {
+        "moduleNameMapper": {
+            "axios": "axios/dist/node/axios.cjs"
+        }
+    },
     "husky": {
         "hooks": {
             "pre-commit": "pretty-quick --staged --pattern \"**/*.*(js|json|jsx|ts|tsx|css|scss|less)\" && sh ./svgo.sh"
