--- a/package.json
+++ b/package.json
@@ -80,13 +80,13 @@
         "node-fetch": "^3.3.1",
         "openid-client": "^5.4.0",
         "prop-types": "^15.7.2",
-        "react": "^18.2.0",
+        "react": "^17.0.2",
         "react-app-polyfill": "^2.0.0",
         "react-collapse": "^5.1.0",
         "react-cookie": "^4.1.1",
         "react-copy-to-clipboard": "^5.0.4",
         "react-day-picker": "^7.4.10",
-        "react-dom": "^18.2.0",
+        "react-dom": "^17.0.2",
         "react-intl": "^5.20.10",
         "react-loading-skeleton": "^2.2.0",
         "react-modal": "^3.14.3",
@@ -107,19 +107,19 @@
         "@craco/craco": "^7.1.0",
         "@navikt/arbeidsgiver-notifikasjoner-brukerapi-mock": "^5.4.8",
         "@sentry/cli": "^1.68.0",
-        "@testing-library/jest-dom": "^5.16.5",
-        "@testing-library/react": "^14.0.0",
+        "@testing-library/jest-dom": "^5.15.1",
+        "@testing-library/react": "^12.1.2",
         "@types/chai": "^4.2.21",
         "@types/classnames": "^2.3.0",
         "@types/enzyme": "^3.10.9",
         "@types/fetch-mock": "^7.3.5",
         "@types/jest": "^29.4.0",
         "@types/node": "^18.15.1",
-        "@types/react": "^18.0.28",
+        "@types/react": "17.0.19",
         "@types/react-collapse": "^5.0.1",
         "@types/react-copy-to-clipboard": "^5.0.1",
         "@types/react-day-picker": "^5.3.0",
-        "@types/react-dom": "^18.0.11",
+        "@types/react-dom": "17.0.19",
         "@types/react-intl": "^2.3.18",
         "@types/react-maskedinput": "^4.0.5",
         "@types/react-responsive": "^8.0.3",
@@ -158,6 +158,9 @@
         "moduleNameMapper": {
             "axios": "axios/dist/node/axios.cjs"
         }
+    },
+    "resolutions": {
+        "@types/react": "^17.0.19"
     },
     "husky": {
         "hooks": {
