--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "type": "commonjs",
+    "module": "commonjs",
     "homepage": "/tiltaksgjennomforing",
     "scripts": {
         "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') craco build",
@@ -12,7 +13,7 @@
         "start-ekstern": "cross-env ENABLE_EXTERNAL_MENU=true craco start",
         "start-intern": "cross-env process.env.ENABLE_INTERNAL_MENU=true craco start",
         "serve-test": "cross-env process.env.ENABLE_INTERNAL_MENU=true node dist/server.js",
-        "test": "cross-env CI=true craco test -w 1",
+        "test": "cross-env CI=true craco test -w 1 --transformIgnorePatterns \"/node_modules/(?!(axios)/).*\" --env=jsdom",
         "test:config": "node -e 'console.dir(require(\"./jest.config.js\"))'",
         "test:help": "craco test --help",
         "up": "docker-compose up -d --remove-orphans --build"
@@ -27,16 +28,13 @@
         "@navikt/ds-react": "^2.6.0",
         "@navikt/fnrvalidator": "^1.1.4",
         "@navikt/nav-dekoratoren-moduler": "^1.6.9",
-        "@navikt/navspa": "^3.0.2",
+        "@navikt/navspa": "^5.0.0",
+        "@navikt/navspa-react-17-adapter": "^1.0.1",
         "@sentry/react": "^6.11.0",
         "@testing-library/user-event": "^14.4.3",
-        "@types/amplitude-js": "^8.0.1",
-        "@types/express-http-proxy": "^1.6.3",
-        "@types/lodash.debounce": "^4.0.6",
-        "@types/react-modal": "^3.12.1",
         "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
         "amplitude-js": "^8.5.0",
-        "axios": "^1.3.4",
+        "axios": "0.27.2",
         "axios-retry": "^3.1.9",
         "babel-polyfill": "^6.26.0",
         "babel-runtime": "^6.26.0",
@@ -105,15 +103,19 @@
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-react": "^7.18.6",
         "@craco/craco": "^7.1.0",
+        "@craco/types": "^7.1.0",
         "@navikt/arbeidsgiver-notifikasjoner-brukerapi-mock": "^5.4.8",
         "@sentry/cli": "^1.68.0",
         "@testing-library/jest-dom": "^5.15.1",
-        "@testing-library/react": "^12.1.2",
+        "@testing-library/react": "12.1.2",
+        "@types/amplitude-js": "^8.0.1",
         "@types/chai": "^4.2.21",
         "@types/classnames": "^2.3.0",
         "@types/enzyme": "^3.10.9",
+        "@types/express-http-proxy": "^1.6.3",
         "@types/fetch-mock": "^7.3.5",
         "@types/jest": "^29.4.0",
+        "@types/lodash.debounce": "^4.0.6",
         "@types/node": "^18.15.1",
         "@types/react": "17.0.19",
         "@types/react-collapse": "^5.0.1",
@@ -122,6 +124,7 @@
         "@types/react-dom": "17.0.19",
         "@types/react-intl": "^2.3.18",
         "@types/react-maskedinput": "^4.0.5",
+        "@types/react-modal": "^3.12.1",
         "@types/react-responsive": "^8.0.3",
         "@types/react-router-dom": "^5.1.8",
         "@types/react-select": "^4.0.17",
@@ -146,7 +149,7 @@
         "tslint-config-prettier": "^1.18.0",
         "tslint-react": "^4.1.0",
         "typescript": "^4.9.5",
-        "webpack-bundle-analyzer": "^4.4.2"
+        "webpack-bundle-analyzer": "^4.8.0"
     },
     "browserslist": [
         ">0.2%",
@@ -154,11 +157,6 @@
         "not ie < 10",
         "not op_mini all"
     ],
-    "jest": {
-        "moduleNameMapper": {
-            "axios": "axios/dist/node/axios.cjs"
-        }
-    },
     "resolutions": {
         "@types/react": "^17.0.19"
     },
