--- a/nais/dev-gcp-ekstern.yaml
+++ b/nais/dev-gcp-ekstern.yaml
@@ -1,4 +1,4 @@
-"ingress": "https://tiltaksgjennomforing.dev.nav.no"
+"ingress": "https://tiltaksgjennomforing.ekstern.dev.nav.no"
 "api-gw-url": "https://tiltak-proxy.dev-fss-pub.nais.io"
 "login-url": "/oauth2/login?redirect=/tiltaksgjennomforing"
 "logout-url": "/oauth2/logout"
