oppdatert aad url-er

--- a/nais/dev-gcp-ekstern.yaml
+++ b/nais/dev-gcp-ekstern.yaml
@@ -5,5 +5,5 @@
 "stillingstitler-url": "http://tiltak-stillingstitler"
 "api-audience": "dev-fss:arbeidsgiver:tiltak-proxy"
 "proxy-cluster": "dev-fss"
-"aad-redirect-url": "https://tiltaksgjennomforing.dev.nav.no/oauth2/callback"
+"aad-redirect-url": "https://tiltaksgjennomforing.ekstern.dev.nav.no/oauth2/callback"
 "notifikasjon-audience": "dev-gcp:fager:notifikasjon-bruker-api"
