--- a/nais/dev-gcp-intern.yaml
+++ b/nais/dev-gcp-intern.yaml
@@ -5,7 +5,7 @@
 "stillingstitler-url": "http://tiltak-stillingstitler"
 "api-scope": "api://dev-fss.arbeidsgiver.tiltak-proxy/.default"
 "proxy-cluster": "dev-fss"
-"aad-redirect-url": "https://tiltaksgjennomforing.dev.intern.nav.no/oauth2/callback"
+"aad-redirect-url": "https://tiltaksgjennomforing.intern.dev.nav.no/oauth2/callback"
 "decorator-internal": "https://internarbeidsflatedecorator-q0.dev.adeo.no"
 "decorator-internal-script": "/internarbeidsflatedecorator/v2.1/static/js/head.v2.min.js"
 "decorator-internal-styling": "/internarbeidsflatedecorator/v2.1/static/css/main.css"
