oppdatering av intern og ekstern dev ingress (#1123)
* oppdatering av intern og ekstern dev ingress

* lagt på sjekk for utleding av miljø i  notifikasjonswidget

* oppdatert aad url-er

--- a/nais/dev-gcp-intern.yaml
+++ b/nais/dev-gcp-intern.yaml
@@ -1,11 +1,11 @@
-"ingress": "https://tiltaksgjennomforing.dev.intern.nav.no"
+"ingress": "https://tiltaksgjennomforing.intern.dev.nav.no"
 "api-gw-url": "https://tiltak-proxy.dev-fss-pub.nais.io"
 "login-url": "/oauth2/login?redirect=/tiltaksgjennomforing"
 "logout-url": "/oauth2/logout"
 "stillingstitler-url": "http://tiltak-stillingstitler"
 "api-scope": "api://dev-fss.arbeidsgiver.tiltak-proxy/.default"
 "proxy-cluster": "dev-fss"
-"aad-redirect-url": "https://tiltaksgjennomforing.dev.intern.nav.no/oauth2/callback"
+"aad-redirect-url": "https://tiltaksgjennomforing.intern.dev.nav.no/oauth2/callback"
 "decorator-internal": "https://internarbeidsflatedecorator-q0.dev.adeo.no"
 "decorator-internal-script": "/internarbeidsflatedecorator/v2.1/static/js/head.v2.min.js"
 "decorator-internal-styling": "/internarbeidsflatedecorator/v2.1/static/css/main.css"
