--- a/server/package.json
+++ b/server/package.json
@@ -4,15 +4,15 @@
     "private": true,
     "homepage": "/tiltaksgjennomforing",
     "scripts": {
-        "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') craco build",
+        "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') yarn build",
         "release": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') node sentry.js",
         "server": "node server.js",
-        "start": "craco start",
-        "start-ekstern": "cross-env ENABLE_EXTERNAL_MENU=true craco start",
-        "start-intern": "cross-env process.env.ENABLE_INTERNAL_MENU=true craco start",
-        "test": "cross-env CI=true craco test -w 1",
+        "start": "yarn start",
+        "start-ekstern": "cross-env ENABLE_EXTERNAL_MENU=true yarn start",
+        "start-intern": "cross-env process.env.ENABLE_INTERNAL_MENU=true yarn start",
+        "test": "cross-env CI=true yarn test -w 1",
         "test:config": "node -e 'console.dir(require(\"./jest.config.js\"))'",
-        "test:help": "craco test --help",
+        "test:help": "yarn test --help",
         "up": "docker-compose up -d --remove-orphans --build"
     },
     "dependencies": {
@@ -29,11 +29,7 @@
         "express-http-proxy": "1.6.2"
     },
     "devDependencies": {
-        "@craco/craco": "^6.2.0",
-        "craco-less": "^1.19.0",
         "cross-env": "^7.0.3",
-        "less": "^4.1.1",
-        "less-watch-compiler": "^1.16.2",
         "@navikt/arbeidsgiver-notifikasjoner-brukerapi-mock": "^5.0.1"
     },
     "browserslist": [
