--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "homepage": "/tiltaksgjennomforing",
     "scripts": {
-        "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') yarn build",
+        "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h')",
         "release": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') node sentry.js",
         "server": "node server.js",
         "start": "yarn start",
