--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') craco build",
         "release": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') node sentry.js",
         "server": "node server.js",
-        "start": "craco start",
+        "start": "craco start --openssl-legacy-provider ",
         "start-ekstern": "cross-env ENABLE_EXTERNAL_MENU=true craco start",
         "start-intern": "cross-env process.env.ENABLE_INTERNAL_MENU=true craco start",
         "test": "cross-env CI=true craco test -w 1",
