--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
         "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h')",
         "release": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') node sentry.js",
         "server": "node server.js",
-        "start": "yarn start",
+        "start": "yarn start --openssl-legacy-provider",
         "start-ekstern": "cross-env ENABLE_EXTERNAL_MENU=true yarn start",
         "start-intern": "cross-env process.env.ENABLE_INTERNAL_MENU=true yarn start",
         "test": "cross-env CI=true yarn test -w 1",
@@ -16,7 +16,6 @@
         "up": "docker-compose up -d --remove-orphans --build"
     },
     "dependencies": {
-      
         "helmet": "^3.21.3",
         "http-proxy-middleware": "^2.0.1",
         "node-cache": "4.2.0",
