--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "build": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') craco build",
         "release": "cross-env GIT_COMMIT_HASH=$(git log -n 1 --pretty=format:'%h') node sentry.js",
-        "server": "node server.js",
+        "server": "node server.js --openssl-legacy-provider ",
         "start": "craco start --openssl-legacy-provider ",
         "start-ekstern": "cross-env ENABLE_EXTERNAL_MENU=true craco start",
         "start-intern": "cross-env process.env.ENABLE_INTERNAL_MENU=true craco start",
@@ -24,7 +24,7 @@
         "@navikt/ds-icons": "^0.5.2",
         "@navikt/ds-react": "^2.4.2",
         "@navikt/fnrvalidator": "^1.1.4",
-        "@navikt/navspa": "^3.0.2",
+        "@navikt/navspa": "^6.0.1",
         "@sentry/react": "^6.11.0",
         "@types/amplitude-js": "^8.0.1",
         "@types/lodash.debounce": "^4.0.6",
@@ -58,22 +58,22 @@
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-app-polyfill": "^2.0.0",
-        "react-collapse": "^5.1.0",
+        "react-collapse": "^5.1.1",
         "react-cookie": "^4.1.1",
         "react-copy-to-clipboard": "^5.0.4",
         "react-day-picker": "^7.4.10",
-        "react-dom": "^17.0.2",
+        "react-dom": "^18.2.0",
         "react-intl": "^5.20.10",
         "react-loading-skeleton": "^2.2.0",
         "react-modal": "^3.14.3",
-        "react-responsive": "^8.2.0",
+        "react-responsive": "^9.0.2",
         "react-router-dom": "^5.2.0",
         "react-select": "^4.3.1",
         "swr": "^1.1.1",
         "url-search-params-polyfill": "^8.1.1"
     },
     "devDependencies": {
-        "@craco/craco": "^6.2.0",
+        "@craco/craco": "^7.1.0",
         "@navikt/arbeidsgiver-notifikasjoner-brukerapi-mock": "^5.4.2",
         "@sentry/cli": "^1.68.0",
         "@testing-library/jest-dom": "^5.15.1",
@@ -95,7 +95,7 @@
         "@types/react-router-dom": "^5.1.8",
         "@types/react-select": "^4.0.17",
         "chai": "^4.3.4",
-        "craco-less": "^1.19.0",
+        "craco-less": "^2.0.0",
         "cross-env": "^7.0.3",
         "enzyme": "^3.11.0",
         "fetch-mock": "^9.11.0",
@@ -108,7 +108,7 @@
         "prettier": "^2.3.2",
         "pretty-quick": "^3.1.1",
         "react-error-overlay": "6.0.9",
-        "react-scripts": "^4.0.3",
+        "react-scripts": "^5.0.1",
         "svgo": "2.4.0",
         "tslint": "^5.20.1",
         "tslint-config-prettier": "^1.18.0",
