oppdatert workflow for dev pipline

--- a/.github/workflows/bygg-og-deploy-dev.yml
+++ b/.github/workflows/bygg-og-deploy-dev.yml
@@ -19,9 +19,9 @@ jobs:
       - name: Server yarn install
         working-directory: ./server
         run: yarn install
-      - name: Server yarn build
+      - name: Server yarn install
         working-directory: ./server
-        run: yarn run build
+        run: yarn install
       - name: Frontend yarn install
         run: yarn install --frozen-lockfile
       - name: Kjør tester
