--- a/.github/workflows/bygg-og-deploy-master.yml
+++ b/.github/workflows/bygg-og-deploy-master.yml
@@ -18,6 +18,9 @@ jobs:
     steps:
       - name: Sjekk ut kode
         uses: actions/checkout@v3
+      - name: Server yarn install
+        working-directory: ./server
+        run: yarn install
       - name: Installer avhengigheter
         run: yarn install --frozen-lockfile
       - name: Kjør tester
