oppdatert pipline for testing av refaktorert server struktur
Co-authored-by: magnus.skalleberg.rom@nav.no
Co-authored-by: millad.dagdoni@nav.no

--- a/.github/workflows/bygg-og-deploy-dev.yml
+++ b/.github/workflows/bygg-og-deploy-dev.yml
@@ -19,6 +19,9 @@ jobs:
       - name: Server yarn install
         working-directory: ./server
         run: yarn install
+      - name: Server yarn build
+        working-directory: ./server
+        run: yarn build
       - name: Frontend yarn install
         run: yarn install --frozen-lockfile
       - name: Kjør tester
