--- a/server/package.json
+++ b/server/package.json
@@ -30,10 +30,15 @@
         "openid-client": "3.7.2"
     },
     "devDependencies": {
+        "@babel/core": "^7.21.4",
+        "@babel/preset-env": "^7.21.4",
+        "@babel/preset-react": "^7.18.6",
+        "@babel/preset-typescript": "^7.21.4",
         "@types/express": "^4.17.17",
         "@types/express-http-proxy": "^1.6.3",
         "@types/fs-extra": "^11.0.1",
         "@types/jsdom": "^21.1.1",
+        "babel": "^6.23.0",
         "babel-loader": "^9.1.2",
         "cross-env": "^7.0.3",
         "typescript": "^5.0.4",
