--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,7 @@
         "jsdom": "^16.4.0",
         "node-cache": "4.2.0",
         "node-fetch": "2.6.1",
-        "openid-client": "3.7.2"
+        "openid-client": "^5.4.0"
     },
     "devDependencies": {
         "@babel/core": "^7.21.4",
