--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,10 +23,10 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "downlevelIteration": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
   },
   "include": [
-    "src"
+    "src", "server"
   ],
   "exclude": [
     "server.js",
