oppdatert pipline for deployment av master branch.
Co-authored-by: magnus.skalleberg.rom@nav.no
Co-authored-by: sindre.loken@nav.no
Co-authored-by: millad.dagdoni@nav.no
Co-authored-by: lundmark.mattias@gmail.com

--- a/.github/workflows/bygg-og-deploy-master.yml
+++ b/.github/workflows/bygg-og-deploy-master.yml
@@ -20,7 +20,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Server yarn install
         working-directory: ./server
-        run: yarn install
+        run: yarn install --frozen-lockfile
+      - name: Server yarn build
+        working-directory: ./server
+        run: yarn build
       - name: Installer avhengigheter
         run: yarn install --frozen-lockfile
       - name: Kjør tester
