--- a/package.json
+++ b/package.json
@@ -16,6 +16,18 @@
         "up": "docker-compose up -d --remove-orphans --build"
     },
     "dependencies": {
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^13.0.0",
+        "@testing-library/user-event": "^13.2.1",
+        "@types/jest": "^27.0.1",
+        "@types/node": "^16.7.13",
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-scripts": "5.0.1",
+        "typescript": "^4.4.2",
+        "web-vitals": "^2.1.0",
         "@formatjs/intl-pluralrules": "^4.1.3",
         "@formatjs/intl-relativetimeformat": "^9.2.3",
         "@navikt/arbeidsgiver-notifikasjon-widget": "^5.4.2",
@@ -57,13 +69,11 @@
         "node-fetch": "^3.3.1",
         "openid-client": "^5.4.0",
         "prop-types": "^15.7.2",
-        "react": "^18.2.0",
         "react-app-polyfill": "^3.0.0",
         "react-collapse": "^5.1.1",
         "react-cookie": "^4.1.1",
         "react-copy-to-clipboard": "^5.1.0",
         "react-day-picker": "^8.6.0",
-        "react-dom": "^18.2.0",
         "react-intl": "^6.3.2",
         "react-loading-skeleton": "^3.2.0",
         "react-modal": "^3.16.1",
