--- a/nais/nais-gcp-ekstern.yaml
+++ b/nais/nais-gcp-ekstern.yaml
@@ -18,6 +18,8 @@ spec:
     path: /tiltaksgjennomforing/internal/isReady
     initialDelay: 5
   env:
+    - name: MILJO
+      value: {{miljo}}
     - name: APIGW_URL
       value: '{{{api-gw-url}}}'
     - name: LOGIN_URL
