--- a/nais/prod-gcp-intern.yaml
+++ b/nais/prod-gcp-intern.yaml
@@ -1,4 +1,5 @@
 "ingress": "https://tiltaksgjennomforing.intern.nav.no"
+"miljo": "prod-gcp"
 "api-gw-url": "https://tiltak-proxy.prod-fss-pub.nais.io"
 "login-url": "/oauth2/login?redirect=/tiltaksgjennomforing"
 "logout-url": "/oauth2/logout"
