--- a/.github/workflows/bygg-og-deploy-dev.yml
+++ b/.github/workflows/bygg-og-deploy-dev.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - name: Sjekk ut kode
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Server yarn install
         working-directory: ./server
         run: yarn install
@@ -42,7 +42,7 @@ jobs:
     needs: bygg
     steps:
       - name: Sjekk ut kode
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Deploy til dev-gcp intern
         uses: nais/deploy/actions/deploy@v1
         env:
@@ -58,7 +58,7 @@ jobs:
     needs: bygg
     steps:
       - name: Sjekk ut kode
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Deploy til dev-gcp ekstern
         uses: nais/deploy/actions/deploy@v1
         env:
@@ -68,18 +68,18 @@ jobs:
           PRINT_PAYLOAD: true
           VARS: nais/dev-gcp-ekstern.yaml
 
-  deploy-labs-gcp:
-    name: Deploy til labs-gcp
+  deploy-dev-gcp-labs:
+    name: Deploy til dev-gcp (labs)
     runs-on: ubuntu-20.04
     needs: bygg
     steps:
       - name: Sjekk ut kode
-        uses: actions/checkout@v2
-      - name: Deploy til labs-gcp
+        uses: actions/checkout@v3
+      - name: Deploy til dev-gcp
         uses: nais/deploy/actions/deploy@v1
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: labs-gcp
-          RESOURCE: nais/labs-gcp.yaml
+          CLUSTER: dev-gcp
+          RESOURCE: nais/dev-gcp-labs.yaml
           PRINT_PAYLOAD: true
-          VARS: nais/labs-gcp.json
+          VARS: nais/dev-gcp-labs.json
