hardkoder outbound rule til prod istedenfor dev

--- a/nais/nais-gcp-intern.yaml
+++ b/nais/nais-gcp-intern.yaml
@@ -56,8 +56,8 @@ spec:
       rules:
         - application: tiltak-proxy
           namespace: arbeidsgiver
-          cluster: dev-fss
+          cluster: prod-fss
         - application: tiltak-stillingstitler
           namespace: arbeidsgiver
       external:
-        - host: tiltak-proxy.dev-fss-pub.nais.io
+        - host: tiltak-proxy.prod-fss-pub.nais.io
