--- a/nais/dev-gcp-ekstern.yaml
+++ b/nais/dev-gcp-ekstern.yaml
@@ -8,3 +8,4 @@
 "proxy-cluster": "dev-fss"
 "aad-redirect-url": "https://tiltaksgjennomforing.ekstern.dev.nav.no/oauth2/callback"
 "notifikasjon-audience": "dev-gcp:fager:notifikasjon-bruker-api"
+"decorator-host": "dekoratoren.ekstern.dev.nav.no"
