--- a/nais/prod-gcp-ekstern.yaml
+++ b/nais/prod-gcp-ekstern.yaml
@@ -8,3 +8,4 @@
 "proxy-cluster": "prod-fss"
 "aad-redirect-url": "https://arbeidsgiver.nav.no/tiltaksgjennomforing/oauth2/callback"
 "notifikasjon-audience": "prod-gcp:fager:notifikasjon-bruker-api"
+"decorator-host": "www.nav.no"
