--- a/nais/nais-gcp-ekstern.yaml
+++ b/nais/nais-gcp-ekstern.yaml
@@ -40,6 +40,8 @@ spec:
       value: '{{{api-audience}}}'
     - name: AAD_REDIRECT_URL
       value: {{{aad-redirect-url}}}
+    - name: ARBEIDSGIVER_DIALOG_URL
+      value: {{{arbeidsgiver-dialog}}}
   tokenx:
     enabled: true
   idporten:
