Access policy har ikke protokoll, bare host

--- a/nais/dev-gcp-labs.yaml
+++ b/nais/dev-gcp-labs.yaml
@@ -48,7 +48,7 @@ spec:
     accessPolicy:
       outbound:
         external:
-          - host: https://tiltak-fakelogin.ekstern.dev.nav.no
+          - host: tiltak-fakelogin.ekstern.dev.nav.no
         rules:
           - application: tiltaksgjennomforing-api-labs
           - application: tiltak-stillingstitler
