--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
     "homepage": "/tiltaksgjennomforing",
     "type": "module",
     "scripts": {
-        "build": "tsc && vite build",
+        "build": "vite build",
+        "prettier": "prettier -c .",
+        "prettier:fix": "prettier -w .",
         "release": "node sentry.js",
         "start": "vite",
+        "svgo": "sh ./svgo.sh",
         "test": "vitest --environment=jsdom",
         "up": "docker-compose up -d --remove-orphans --build"
     },
@@ -18,9 +21,9 @@
         "@navikt/ds-icons": "^3.4.3",
         "@navikt/ds-react": "^5.18.1",
         "@navikt/nav-dekoratoren-moduler": "^1.6.9",
-        "@navikt/navspa": "^5.0.1",
+        "@navikt/navspa": "^6.0.1",
         "amplitude-js": "^8.21.9",
-        "axios": "^0.21.1",
+        "axios": "^1.6.7",
         "axios-retry": "^4.0.0",
         "classnames": "^2.5.1",
         "lodash.debounce": "^4.0.8",
@@ -28,7 +31,7 @@
         "prop-types": "^15.7.2",
         "react": "^18.2.0",
         "react-collapse": "^5.1.1",
-        "react-cookie": "^4.1.1",
+        "react-cookie": "^7.0.2",
         "react-dom": "^18.2.0",
         "react-loading-skeleton": "^3.4.0",
         "react-responsive": "^9.0.2",
@@ -37,7 +40,7 @@
         "swr": "^2.2.4"
     },
     "devDependencies": {
-        "@sentry/cli": "^2.28.4",
+        "@sentry/cli": "^2.28.5",
         "@sentry/react": "^7.100.1",
         "@testing-library/react": "^14.2.1",
         "@types/amplitude-js": "^8.16.5",
@@ -50,19 +53,12 @@
         "@types/react-responsive": "^8.0.8",
         "@types/react-router-dom": "^5.3.3",
         "@vitejs/plugin-react": "^4.2.1",
-        "husky": "^7.0.2",
         "less": "^4.2.0",
         "prettier": "^3.2.5",
-        "pretty-quick": "3.1.1",
-        "svgo": "2.4.0",
+        "svgo": "^3.2.0",
         "typescript": "^5.3.3",
         "vite": "^5.1.1",
         "vite-plugin-svgr": "^4.2.0",
         "vitest": "^1.2.2"
-    },
-    "husky": {
-        "hooks": {
-            "pre-commit": "pretty-quick --staged --pattern \"**/*.*(js|json|jsx|ts|tsx|css|scss|less)\" && sh ./svgo.sh"
-        }
     }
 }
